# plutus

./: cabal.project
Week02/: Week02.cabal
Week02/homework/: Homework1.hs  Homework2.hs
Week02/lecture/: Burn.hs  CustomTypes.hs  FortyTwo.hs  FortyTwoTyped.hs  Gift.hs
Week02/tests/: THomework.hs
nix/: sources.json
nix/patches/: ghcide_partial_iface.patch
nix/pkgs/haskell/: extra.nix
plutus-benchmark/: plutus-benchmark.cabal
plutus-benchmark/marlowe/src/PlutusBenchmark/Marlowe/Scripts/: Semantics.hs
plutus-core/: plutus-core.cabal
plutus-core/plutus-core/src/PlutusCore/: Annotation.hs
plutus-core/plutus-core/src/PlutusCore/Name/: Unique.hs
plutus-core/plutus-core/src/Text/: SimpleShow.hs
plutus-core/plutus-ir/Language/PlutusIR/: Compiler.hs
plutus-core/plutus-ir/Language/PlutusIR/Certifier/: Extracted.hs  Glue.hs
plutus-core/plutus-ir/Language/PlutusIR/Optimizer/: DeadCode.hs
plutus-core/plutus-ir/src/PlutusIR/: Compiler.hs  Pass.hs
plutus-core/plutus-ir/src/PlutusIR/Certifier/: Extracted.hs  Glue.hs  ToCoq.hs
plutus-core/plutus-ir/src/PlutusIR/Compiler/: Types.hs
plutus-core/plutus-ir/src/PlutusIR/Core/: Type.hs
plutus-core/plutus-ir/src/PlutusIR/Transform/: DeadCode.hs  EvaluateBuiltins.hs  RecSplit.hs
plutus-core/plutus-ir/test/: TransformSpec.hs
plutus-core/testlib/PlutusIR/: Test.hs
plutus-core/testlib/PlutusIR/Pass/: Test.hs
plutus-tx-plugin/: plutus-tx-plugin.cabal
plutus-tx-plugin/src/: Extracted.hs  Glue.hs
plutus-tx-plugin/src/Language/PlutusTx/: Plugin.hs
plutus-tx-plugin/src/PlutusTx/: Certifier.hs  Options.hs  Plugin.hs
plutus-tx-plugin/src/Text/: SimpleShow.hs
plutus-tx/src/PlutusTx/: Lift.hs
plutus-tx/testlib/PlutusTx/: Test.hs
(+2 files in other folders)
